# HyperLPR-QT

./: CMakeLists.txt  CMakeLists.txt.user.57850d3.22  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_pipeline.cpp
include/: niBlackThreshold.h
src/: util.h
